snapshots/syntax/library/statements/stop/stop_multiple_on_same_line.snap
---
source: src/syntax/library/statements/system_interaction/stop.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: StopStatement
      children:
        - kind: StopKeyword
          text: Stop
        - kind: ColonOperator
          text: ":"
        - kind: Whitespace
          text: " "
        - kind: StopKeyword
          text: Stop
        - kind: Newline
          text: "\n"
